@@ -1,3 +1,11 @@
+2008-08-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Disable the Tools menu item and the keybinding callbacks when
+   a dictionary could not be loaded.
+   Improve error message when loading the chosen dictionary failed.
+
+
 2008-07-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/spellcheck.c:
